<resources>
    <string name="app_name">Connect!</string>
    <string name="need_a_new_account">Need A New Account?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="your_email">Your Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there!, I\'m using Connect!</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">Channerl Decription 1</string>
</resources>
